# janelia_ibl_bwm_talk

./: .gitignore  README.md  _quarto.yml  appendix_why_this_framework_is_powerful.ipynb  appendix_why_this_framework_is_powerful.py  build.sh  dataset.py  demo.py  jupytext.toml  preview.sh  pyproject.toml  recording_ids.txt  requirements-dev.txt  requirements.txt  wheel_speed_minimal_example.ipynb  wheel_speed_minimal_example.py
.github/workflows/: deploy.yml
ibl_brain_wide_map_2025/: bwm_qc.csv  pipeline.py  utils.py
