[project]
name = "ibl-wheel-speed-minimal"
version = "0.1.0"
description = "Self-contained minimal wheel-speed decoding example on IBL Brain-Wide Map 2025"
requires-python = ">=3.10"

# Runtime deps the notebook actually imports, pinned to match the global project
# (see ../pyproject.toml). torch-brain pulls numpy/pandas/h5py/tqdm/ray/rich
# transitively; torch resolves to the same CUDA build as the parent env on this
# host. The heavy unused extras (xformers, ray[tune], wandb, hydra, cebra, npyx)
# are intentionally omitted since the notebook never imports them.
dependencies = [
    "torch-brain==0.2.0a0",
    "torch==2.10.0",
    "scikit-learn==1.7.2",
    "matplotlib",
    "tqdm",
    # notebook <-> .ipynb conversion and the Jupyter kernel Quarto renders through
    "jupytext>=1.16",
    "ipykernel",
    "nbclient",
    "jupyter-client",
    "nbformat",
]

# This folder is a collection of scripts, not an installable package: tell uv not
# to try to build/install it, only to manage the dependency environment.
[tool.uv]
package = false
